fix: Section content spacing

--- a/niall-paterson/partials/_layout.scss
+++ b/niall-paterson/partials/_layout.scss
@@ -39,13 +39,14 @@ p {
 }
 
 section {
-
-  @include flex-column-around;
-
-  &#home {
-    @include flex-column-center;
-  }
+  @include flex-column-center;
 }
+
+.section-wrapper {
+  @include flex-column-around;
+  height: 75vh;
+}
+
 
 section,
 ul {
